default/objects/AlgorithmOutcomes__c/AlgorithmOutcomes__c.object-meta.xml
<CustomObject>
    <label>Algorithm Outcome</label>
    <nameField>
        <displayFormat>AO - {00000}</displayFormat>
        <label>Algorithm Outcomes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Algorithm Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>