default/objects/AlgorithmOutcomes__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Algorithm Outcomes</relationshipLabel>
    <relationshipName>Algorithm_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>