default/objects/AlgorithmOutcomes__c/fields/StepbyStepDescription__c.field-meta.xml
<CustomField>
    <fullName>StepbyStepDescription__c</fullName>
    <label>Step by Step Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>